--- a/Analysis/mwi_transmission.Rmd
+++ b/Analysis/mwi_transmission.Rmd
@@ -16,7 +16,7 @@ library(data.table)
 library(magrittr)
 library(ggplot2)
 library(devtools)
-devtools::install_github("BershteynLab/EMODAnalyzeR")
+devtools::install_github("BershteynLab/EMODAnalyzeR", force = TRUE)
 ```
 
 # Read summary report
@@ -280,13 +280,12 @@ baseline.comp.data <- merge(baseline.comp.data, p1, by = c("Year")) %>%
 
 ## Save output
 ```{r Save baseline output}
-write_excel_csv(baseline.comp.data, "/gpfs/data/bershteynlab/EMOD/citrod01/MWI_calib_20220422/transmission_baseline_comp_data.csv")
+write_excel_csv(baseline.comp.data, "transmission_baseline_comp_data.csv")
 ```
 
 ## Additional analysis
 
-(These columns are not explicitly requested for the sources of transmissions project.)
-
+### Proportion of new infections by age group
 What is the proportion of new infections by age group?
 
 ```{r}
@@ -304,6 +303,8 @@ data %>% group_by(Year, Gender, Age, sim.ix) %>%
   facet_grid(cols = vars(Gender), rows = vars(Year))
 
 ```
+
+### Percentage on ART in each age group
 What is the percentage on ART in each age group?
 
 ```{r}
@@ -323,7 +324,7 @@ data %>% filter(Year %in% c(2010.5, 2020.5, 2030.5, 2040.5))
 
 ```
 
-## HIV Mortality
+### HIV Mortality
 
 One last thing to do: the mortality tables do need two additional columns: total number of HIV deaths and total hiv population at mid year
 Total, men, and women
@@ -519,9 +520,9 @@ fun.undiag = function(tr.data, event.report, year.age.sex){
   return(dat.undiagnosed)
 }
 
-dat.undiagnosed = fun.undiag(tr.data, event.report, year.age.sex)
-
-dat.undiagnosed %>% head
+# dat.undiagnosed = fun.undiag(tr.data, event.report, year.age.sex)
+# 
+# dat.undiagnosed %>% head
 ```
 
 ## Diagnosed, not on ART 
@@ -530,7 +531,7 @@ dat.undiagnosed %>% head
 # Find the set of all transmissions after diagnosis
 # Find set of all transmissions after diagnosis and after ANY ART init 
 # Subtract
-# This isn't working because we have negatives. What am I doing wrong? Need to take the first time somoene inits art only
+# This isn't working because we have negatives. What am I doing wrong? Need to take the first time someone inits art only
 
 fun.diag.noart = function(tr.data, event.report, year.age.sex){
   p0 <- left_join(
@@ -582,9 +583,9 @@ fun.diag.noart = function(tr.data, event.report, year.age.sex){
   return(dat.diagnosed.noART)
 }
 
-dat.diagnosed.noART <- fun.diag.noart(tr.data, event.report, year.age.sex)
-
-dat.diagnosed.noART %>% head
+# dat.diagnosed.noART <- fun.diag.noart(tr.data, event.report, year.age.sex)
+# 
+# dat.diagnosed.noART %>% head
 
 ```
 
@@ -664,9 +665,9 @@ fun.onart.under6mo.firstinit <- function(tr.data, art.report, year.age.sex){
   return(dat.onart.under6mo.firstinit)
 }
 
-dat.onart.under6mo.firstinit = fun.onart.under6mo.firstinit(tr.data, art.report, year.age.sex)
-
-dat.onart.under6mo.firstinit %>% head
+# dat.onart.under6mo.firstinit = fun.onart.under6mo.firstinit(tr.data, art.report, year.age.sex)
+# 
+# dat.onart.under6mo.firstinit %>% head
 ```
 
 ## On ART less than 6 months after ART re-initiation
@@ -753,9 +754,9 @@ fun.onart.under6mo.reinit <- function(tr.data, art.report, year.age.sex){
   return(dat.onart.under6mo.reinit)
 }
 
-dat.onart.under6mo.reinit <- fun.onart.under6mo.reinit(tr.data, art.report, year.age.sex)
-
-dat.onart.under6mo.reinit %>% head()
+# dat.onart.under6mo.reinit <- fun.onart.under6mo.reinit(tr.data, art.report, year.age.sex)
+# 
+# dat.onart.under6mo.reinit %>% head()
 ```
 
 ## On ART stratify by Viral Load
@@ -807,10 +808,10 @@ fun.onart.vl <- function(tr.data, art.report, year.age.sex){
   return(dat.onart.vl)
 }
 
-dat.onart.vl <- fun.onart.vl(tr.data, art.report, year.age.sex)
-
-dat.onart.vl %>% head()
- 
+# dat.onart.vl <- fun.onart.vl(tr.data, art.report, year.age.sex)
+# 
+# dat.onart.vl %>% head()
+#  
 ```
 
 ## On ART less than 6 months, stratify by viral load
@@ -865,9 +866,9 @@ fun.onart.under6mo.vl <- function(tr.data, art.report, year.age.sex){
   return(dat.onart.under.6mo.vl)
 }
 
-dat.onart.under.6mo.vl = fun.onart.under6mo.vl(tr.data, art.report, year.age.sex)
-
-dat.onart.under.6mo.vl %>% head()
+# dat.onart.under.6mo.vl = fun.onart.under6mo.vl(tr.data, art.report, year.age.sex)
+# 
+# dat.onart.under.6mo.vl %>% head()
 
 ```
 
@@ -924,9 +925,9 @@ fun.onart.over6mo.vl <- function(tr.data, art.report, year.age.sex){
   return(dat.onart.over.6mo.vl)
 }
 
-dat.onart.over.6mo.vl <- fun.onart.over6mo.vl(tr.data, art.report, year.age.sex)
-
-dat.onart.over.6mo.vl %>% head()
+# dat.onart.over.6mo.vl <- fun.onart.over6mo.vl(tr.data, art.report, year.age.sex)
+# 
+# dat.onart.over.6mo.vl %>% head()
 
 ```
 
@@ -984,9 +985,9 @@ fun.dropout.all <- function(tr.data, art.report, year.age.sex){
   return(dat.dropout)
 }
 
-dat.dropout <- fun.dropout.all(tr.data, art.report, year.age.sex)
-
-dat.dropout %>% head()
+# dat.dropout <- fun.dropout.all(tr.data, art.report, year.age.sex)
+# 
+# dat.dropout %>% head()
 
 ```
 
@@ -1045,9 +1046,9 @@ fun.dropout.first <- function(tr.data, art.report, year.age.sex){
   return(dat.dropout.first)
 }
 
-dat.dropout.first <- fun.dropout.first(tr.data, art.report, year.age.sex)
-
-dat.dropout.first %>% head
+# dat.dropout.first <- fun.dropout.first(tr.data, art.report, year.age.sex)
+# 
+# dat.dropout.first %>% head
 ``` 
 
 ## Dropped out of ART, 2nd+ interruption, less than 6 months
@@ -1108,12 +1109,9 @@ fun.dropout.subseq.under6 <- function(tr.data, art.report, year.age.sex){
   return(dat.dropout.subseq.under6mo)
 }
 
-dat.dropout.subseq.under6mo <- fun.dropout.subseq.under6(tr.data, art.report, year.age.sex)
-
-
-dat.dropout.subseq.under6mo %>% head()
-
-
+# dat.dropout.subseq.under6mo <- fun.dropout.subseq.under6(tr.data, art.report, year.age.sex)
+# 
+# dat.dropout.subseq.under6mo %>% head()
 ``` 
 
 ## Dropped out of ART, 2nd+ interruption, more than 6 months
@@ -1175,9 +1173,9 @@ fun.dropout.subseq.over6 <- function(tr.data, art.report, year.age.sex){
   return(dat.dropout.subseq.over6mo)
 }
 
-dat.dropout.subseq.over6mo <- fun.dropout.subseq.over6(tr.data, art.report, year.age.sex)
-
-dat.dropout.subseq.over6mo %>% head()
+# dat.dropout.subseq.over6mo <- fun.dropout.subseq.over6(tr.data, art.report, year.age.sex)
+# 
+# dat.dropout.subseq.over6mo %>% head()
 
 ```  
 
@@ -1241,7 +1239,7 @@ for (i in 1:length(folder.list)){
 
 dat.transm.list = list()
 
-for (i in range(1:3)){ #range(1:length(folder.list))){
+for (i in range(1:length(folder.list))){
   tr.data = tr.data.list[[i]]
   event.report = event.report.list[[i]]
   art.report = art.report.list[[i]]
@@ -1281,40 +1279,6 @@ for (i in range(1:3)){ #range(1:length(folder.list))){
 
 dat.transm.list <- bind_rows(dat.transm.list)
 ```
-
-```{r}
-tr.data = tr.data.list[[i]]
-event.report = event.report.list[[i]]
-art.report = art.report.list[[i]]
-
-dat.undiagnosed = fun.undiag(tr.data, event.report, year.age.sex)
-dat.diagnosed.noART <- fun.diag.noart(tr.data, event.report, year.age.sex)#
-dat.onart.under6mo.firstinit = fun.onart.under6mo.firstinit(tr.data, art.report, year.age.sex)#
-dat.onart.under6mo.reinit <- fun.onart.under6mo.reinit(tr.data, art.report, year.age.sex)#
-dat.onart.vl <- fun.onart.vl(tr.data, art.report, year.age.sex)#
-dat.onart.under.6mo.vl = fun.onart.under6mo.vl(tr.data, art.report, year.age.sex)#
-dat.onart.over.6mo.vl <- fun.onart.over6mo.vl(tr.data, art.report, year.age.sex)#
-dat.dropout <- fun.dropout.all(tr.data, art.report, year.age.sex)#
-dat.dropout.first <- fun.dropout.first(tr.data, art.report, year.age.sex)#
-dat.dropout.subseq.under6mo <- fun.dropout.subseq.under6(tr.data, art.report, year.age.sex)#
-dat.dropout.subseq.over6mo <- fun.dropout.subseq.over6(tr.data, art.report, year.age.sex)#
-
-dat.transm <- merge(
-  dat.undiagnosed,
-  dat.diagnosed.noART,
-  by = c("Tr_year_binned","Age_bin")
-) %>% 
-  merge( dat.onart.under6mo.firstinit, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.onart.under6mo.reinit, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.onart.vl, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.onart.under.6mo.vl, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.onart.over.6mo.vl, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.dropout, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.dropout.first, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.dropout.subseq.under6mo, by = c("Tr_year_binned","Age_bin") ) %>% 
-  merge( dat.dropout.subseq.over6mo, by = c("Tr_year_binned","Age_bin") ) 
-```
-
 
 ## Format and prep output
 ```{r Rescale according to population scale factor}
@@ -1389,9 +1353,111 @@ dat.transm.output <- merge(dat.plhiv %>% mutate(Year = Year- .5), dat.hivdeaths 
   arrange(Age_bin, Tr_year_binned)
 ```
 
+## Save output
+
 ```{r Save output}
 write_excel_csv(dat.transm.output, "mihpsa_transmissions_table.csv")
 ```
 
+## Additional Analysis
 
+### Total number of people in each category
+
+Count people in each of four categories:
+* Undiagnosed
+* Diagnosed, not yet on ART
+* On ART
+* Off ART
+
+Age groups
+* 15-24
+* 25-34
+* 35+
+
+Issue is that before I was counting transmissions. Now I need to count people.
+#### Counting undiagnosed
+```{r}
+dat.undiagnosed <- sim.results %>% group_by(Year, Gender, Age, sim.ix) %>% 
+  summarize(Population = sum(Population * pop.scaling.factor),
+            Infected = sum(Infected * pop.scaling.factor),
+            Diagnosed = sum(Diagnosed * pop.scaling.factor)) %>% 
+  group_by(Year, Gender, Age) %>% 
+  summarize(Population = mean(Population),
+            Infected = mean(Infected),
+            Diagnosed = mean(Diagnosed)) %>% 
+  ungroup() %>% 
+  mutate(Undiagnosed = Infected - Diagnosed)
+
+dat.undiagnosed %>% head
+```
+
+#### Counting On ART
+```{r}
+dat.onart <- sim.results %>% group_by(Year, Gender, Age, sim.ix) %>% 
+  summarize(On_ART = sum(On_ART * pop.scaling.factor)) %>% 
+  group_by(Year, Gender, Age) %>% 
+  summarize(On_ART = mean(On_ART), .groups = 'keep') %>% 
+  ungroup()
+
+dat.onart
+```
+
+#### Counting Off ART
+
+At least one interruption
+
+
+
+
+```{r}
+art.report.dropout <- art.report %>% 
+    arrange(Year) %>% 
+    group_by(Individual_ID, event) %>% 
+    mutate(event_ix = row_number())
+# pair each dropout event with the subsequent art init event
+art.report.dropout[which(art.report.dropout$event == 'DropOut'),]$event_ix =
+  art.report.dropout[which(art.report.dropout$event == 'DropOut'),]$event_ix +1
+
+art.report.dropout %>% 
+  full_join(art.report.dropout$Year, by = Year)
+
+cross_join(
+  data.table(Year.round = c(2001:2047)), 
+  art.report.dropout
+) %>% View
+
+# In any given year, how many individuals have *most recently* initiated ART?
+art.report.dropout$Year %>% unique 
+
+art.report.dropout %>% group_by(Year) %>% slice(1) %>% View
+
+# In any given year, how many individuals have *most recently* dropped out of ART?
+
+```
+
+
+```{r}
+input_path = "/gpfs/scratch/citrod01/experiments/Malawi/Baseline-campaign_Malawi_20220422_recalib-mort___2023_11_06_21_47_46_089549/"
+
+sim.results.mort <- EMODAnalyzeR::read.simulation.results.bigpurple(
+  experiment_path = input_path,
+  scenario_name = 'baseline',
+  summarize_columns = c("Newly.Infected", "Newly.Tested.Positive", "Newly.Tested.Negative",
+                        "Population","Infected", "On_ART","Died", "Died_from_HIV",
+                        "Tested.Past.Year.or.On_ART", "Tested.Ever","Diagnosed" ),
+  stratify_columns = c("Year", "Gender", "Age"),
+  min_age_inclusive = 0,
+  max_age_inclusive = 99
+) %>% 
+  ungroup()
+```
+
+```{r}
+sim.results %>% filter(sim.ix == 2)
+```
+
+
+```{r}
+sim.results.mort %>% filter(sim.ix == 2)
+```
 
